cds-kube-prometheus/ingress/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-i7oqvu.yun-paas.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port: 
              number: 3000
        path: /
        pathType: ImplementationSpecific
