cds-kube-prometheus/ingress/prometheus-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: prometheus
   namespace: monitoring
spec:
   tls:
     - secretName: monitoring-certs
   rules:
   - host: k8s.prometheus
     http:
       paths:
       - path: 
         backend:
          serviceName: prometheus-k8s
          servicePort: 9090
